--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sqaure-docs",
+  "name": "square-docs",
   "version": "0.0.0",
   "description": "Markdown based documents for web and print",
   "main": "index.js",
