--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.5.1",
+    "standard-version": "^9.3.2",
     "typescript": "^4.5.2"
   }
 }
