--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -33,12 +33,13 @@ jobs:
       - run: npm run release -w packages/cli
       - run: git push --follow-tags origin main
       - run: npx extract-changelog-release packages/cli/CHANGELOG.md > CLI_RELEASE_BODY.md
+      - run: echo ::set-output name=tag_name::$(git describe HEAD --abbrev=0)
       - name: create release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          release_name: Release ${{ steps.publish_tag.outputs.tag_name }}
-          tag_name: ${{ steps.publish_tag.outputs.tag_name }}
+          release_name: Release $(git describe HEAD --abbrev=0)
+          tag_name: $(git describe HEAD --abbrev=0)
           body_path: CLI_RELEASE_BODY.md
       - run: npm publish -w packages/cli
