chore: add build automation

--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -31,15 +31,19 @@ jobs:
       - run: npm ci
       - run: npm run build --workspaces --if-present
       - run: npm run release -w packages/cli
-      - run: git push --follow-tags origin main
+      - name: publish tag
+        id: publish_tag
+        run: |
+          git push --follow-tags origin main
+          echo ::set-output name=tag_name::$(git describe HEAD --abbrev=0)
       - run: npx extract-changelog-release packages/cli/CHANGELOG.md > CLI_RELEASE_BODY.md
-      - run: echo ::set-output name=tag_name::$(git describe HEAD --abbrev=0)
+      - run: echo ${{ steps.publish_tag.outputs.tag_name }}
       - name: create release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          release_name: Release $(git describe HEAD --abbrev=0)
-          tag_name: $(git describe HEAD --abbrev=0)
+          release_name: Release ${{ steps.publish_tag.outputs.tag_name }}
+          tag_name: ${{ steps.publish_tag.outputs.tag_name }}
           body_path: CLI_RELEASE_BODY.md
       - run: npm publish -w packages/cli
