chore: intial config package created

--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -7,7 +7,7 @@ name: cli
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths: 
       - 'packages/cli/**'
 
